--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
     "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-watch": "^3.1.2",
     "node-sass": "^4.5.3",
